# misaxx-imaging

./: CMakeLists.txt  README.md
cmake/: misaxx-imaging-config.cmake.in  misaxx-imaging-core-config.cmake.in  misaxx-static-opencv-config.cmake.in  module_info.cpp.in  module_info.h.in
cv2/: CMakeLists.txt
cv2/include/misaxx/imaging/utils/cv2/: BMat.h  ReadableBMatTypes.h  SMat.h  UnionSMat.h  connectivity.h  label_properties.h  labeled_image_properties.h  margin.h  pixel.h  recoloring_map.h  static_types.h  structuring_element.h
cv2/include/misaxx/imaging/utils/cv2/detail/: BMat.h
cv2/include/misaxx/imaging/utils/cv2/detail/toolbox/: toolbox_binarize.h
cv2/include/misaxx/imaging/utils/cv2/images/: BGR_8U_BMat.h  G_16S_BMat.h  G_16U_BMat.h  G_32F_BMat.h  G_32S_BMat.h  G_64F_BMat.h  G_8S_BMat.h  G_8U_BMat.h  G_BMat.h  G_xF_BMat.h  G_xS_BMat.h  G_xU_BMat.h  G_xU_xS_BMat.h
cv2/include/misaxx/imaging/utils/cv2/io/: tiffio.h
cv2/include/misaxx/imaging/utils/cv2/label_properties/: cc_average_intensity.h
cv2/include/misaxx/imaging/utils/cv2/toolbox/: toolbox_apply.h  toolbox_binarize.h  toolbox_blur.h  toolbox_color.h  toolbox_labeling.h  toolbox_morph.h  toolbox_normalize.h  toolbox_query.h  toolbox_recoloring.h  toolbox_resize.h  toolbox_semantic_convert.h  toolbox_statistics.h  toolbox_values.h
cv2/src/: BMat.cpp  margin.cpp  pixel.cpp  structuring_element.cpp
cv2/src/images/: BGR_8U_BMat.cpp  G_16S_BMat.cpp  G_16U_BMat.cpp  G_32F_BMat.cpp  G_32S_BMat.cpp  G_64F_BMat.cpp  G_8S_BMat.cpp  G_8U_BMat.cpp  G_BMat.cpp  G_xF_BMat.cpp  G_xS_BMat.cpp  G_xU_BMat.cpp  G_xU_xS_BMat.cpp
cv2/src/io/: tiffio.cpp
cv2/src/label_properties/: cc_average_intensity.cpp
cv2/src/toolbox/: toolbox_apply.cpp  toolbox_binarize.cpp  toolbox_blur.cpp  toolbox_color.cpp  toolbox_labeling.cpp  toolbox_morph.cpp  toolbox_normalize.cpp  toolbox_query.cpp  toolbox_recoloring.cpp  toolbox_resize.cpp  toolbox_semantic_convert.cpp  toolbox_statistics.cpp  toolbox_values.cpp
include/misaxx-imaging/accessors/: misa_image_file.h  misa_image_stack.h
include/misaxx-imaging/caches/: misa_image_file_cache.h  misa_image_stack_cache.h
include/misaxx-imaging/coixx/: cumulative_histogram.h  histogram.h  image.h  margin.h  pixel.h  pixel_value.h  structuring_element.h  thresholding.h  visualizer_gui.h
include/misaxx-imaging/coixx/algorithms/: superpixels_slic.h  superpixels_slic_algorithm.h
include/misaxx-imaging/coixx/colors/: color_bgr_uint8.h  color_grayscale_floating.h  color_grayscale_int.h  color_hsv_uint8.h
include/misaxx-imaging/coixx/converters/: hard_convert.h  reinterpret_convert.h  semantic_convert.h
include/misaxx-imaging/coixx/io/: auto_image_io.h  image_io.h  tiff_reader.h
include/misaxx-imaging/coixx/objects/: contour.h  label_centroid_position.h  label_dummy_property.h  label_min_max_position.h  label_pixel_count.h  label_properties.h  object_average_intensity.h  object_histogram.h  object_pixel_stats.h  object_properties.h
include/misaxx-imaging/coixx/toolbox/: toolbox.h  toolbox_assert.h  toolbox_binarize.h  toolbox_binarize_componentotsu.h  toolbox_binarize_huang.h  toolbox_binarize_superpixel_graphcut.h  toolbox_bitwise.h  toolbox_blob.h  toolbox_blur.h  toolbox_channels.h  toolbox_compose.h  toolbox_distance_transform.h  toolbox_edge.h  toolbox_generate.h  toolbox_generic.h  toolbox_io.h  toolbox_labeling.h  toolbox_localminmax.h  toolbox_mask.h  toolbox_morph.h  toolbox_morph_cross.h  toolbox_normalize.h  toolbox_objects.h  toolbox_opencv.h  toolbox_operators.h  toolbox_recoloring.h  toolbox_resize.h  toolbox_statistics.h  toolbox_text.h  toolbox_traits.h  toolbox_utils.h  toolbox_values.h  toolbox_visualization.h  toolbox_visualize_graph_flow.h
include/misaxx-imaging/descriptions/: misa_image_description.h  misa_image_stack_description.h
include/misaxx-imaging/patterns/: misa_image_file_pattern.h  misa_image_file_stack_pattern.h  misa_image_pattern.h  misa_image_stack_pattern.h
include/misaxx-imaging/utils/: misc.h  percentiles.h  thresholding.h
include/misaxx/imaging/accessors/: misa_image_file.h  misa_image_stack.h
include/misaxx/imaging/caches/: misa_image_file_cache.h  misa_image_stack_cache.h
include/misaxx/imaging/coixx/: buffer.h  image.h  pixel_value.h  recoloring_map.h  structuring_element.h  thresholding.h  visualizer_gui.h
include/misaxx/imaging/coixx/algorithms/: superpixels_slic.h  superpixels_slic_algorithm.h
include/misaxx/imaging/coixx/colors/: color_bgr_uint8.h  color_grayscale_floating.h  color_grayscale_int.h  color_hsv_uint8.h
include/misaxx/imaging/descriptions/: misa_image_description.h  misa_image_stack_description.h
include/misaxx/imaging/patterns/: misa_image_pattern.h  misa_image_stack_pattern.h
include/misaxx/imaging/utils/: misc.h  percentiles.h  thresholding.h  tiffio.h
src/misaxx-imaging/accessors/: misa_image_file.cpp  misa_image_stack.cpp
src/misaxx-imaging/caches/: misa_image_file_cache.cpp  misa_image_stack_cache.cpp
src/misaxx-imaging/coixx/: margin.cpp  structuring_element.cpp  visualizer_gui.cpp
src/misaxx-imaging/coixx/algorithms/: superpixels_slic.cpp
src/misaxx-imaging/coixx/colors/: color_bgr_uint8.cpp  color_hsv_uint8.cpp
src/misaxx-imaging/coixx/io/: tiff_reader.cpp  tiff_writer.cpp
src/misaxx-imaging/coixx/objects/: contour.cpp
src/misaxx-imaging/descriptions/: misa_image_description.cpp  misa_image_stack_description.cpp
src/misaxx-imaging/patterns/: misa_image_file_pattern.cpp  misa_image_file_stack_pattern.cpp  misa_image_pattern.cpp  misa_image_stack_pattern.cpp
src/misaxx/imaging/: module_info.cpp
src/misaxx/imaging/accessors/: misa_image_file.cpp  misa_image_stack.cpp
src/misaxx/imaging/caches/: misa_image_file_cache.cpp  misa_image_stack_cache.cpp
src/misaxx/imaging/coixx/: margin.cpp  structuring_element.cpp  visualizer_gui.cpp
src/misaxx/imaging/descriptions/: misa_image_description.cpp  misa_image_stack_description.cpp
src/misaxx/imaging/patterns/: misa_image_pattern.cpp  misa_image_stack_pattern.cpp
src/misaxx/imaging/utils/: tiffio.cpp
(+55 files in other folders)
